# Ainda-nao-funciona

./: .cursorrules  .env  .env.backup  .env.backup_20250810212702  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPATIBILITY_ANALYSIS.md  CONFIGURACAO_SHOPEE.md  DASHBOARD_COMPLETO_README.md  DOCUMENTACAO_USUARIO.md  Dockerfile  FINAL_CANVAS_FIX.md  FINAL_FIXES_SUMMARY.md  GO_LIVE_README.md  GUIA_API_SHOPEE_ERRO_10035.md  GUIA_TESTE_SISTEMA.md  GUIA_TREINAMENTO_SUPORTE.md  IMPLEMENTACAO_SHOPEE_API.md  IMPLEMENTACAO_SHOPEE_COMPLETA.md  INSTRUCOES_API_CORRIGIDA.md  Links para serem implementados.txt  Makefile  README.md  README_COMPLETO.md  README_FLET.md  README_MELHORIAS_TECNICAS.md  README_PLAYWRIGHT_SCRAPERS.md  README_PRODUCAO.md  README_SHOPEE_BOT.md  README_SISTEMA_INTELIGENTE.md  README_SISTEMA_UNIFICADO.md  RELATORIO_FINAL_API_SHOPEE.md  RELATORIO_FINAL_SHOPEE_API.md  RELATORIO_FINAL_SHOPEE_SCRAPER.md  RELATORIO_IMPLEMENTACAO_PRODUCAO.md  RELATORIO_IMPLEMENTACAO_SCRAPERS_COMPLETA.md  SHOPEE_API_INTEGRATION.md  SHOPEE_QUERIES_EXPLORER.txt  (+289 more)
.data/: config.json
.github/: stale.yml
.tmp.driveupload/: 105242  105250  105252  107210  107242  107244  107246  107250  107252  107268  107272  107292  107300  107302  107449  107453  107455  107457  107459  107461  107463  107465  107467  107469  107471  107473  107475  107477  107479  107481  107483  107485  107487  107489  107491  107493  107495  107497  107499  107501  (+9800 more)
Arquivos uteis/: robots da amazon.txt  robots da magazine luiza.txt  robots do zoom.txt
_archive/: 175787
api/: main.py
app/: __init__.py  compat_flet.py  dashboard.py
config/: SETUP_GITHUB.md  dashboard_prefs.json  env.example  env_example.txt  redis.example.conf
core/: __init__.py  auth.py  csv_exporter.py  data_service.py  database.py  intelligent_bot.py  live_logs.py  logging_setup.py  metrics.py  models.py  normalize.py  price_intelligence.py  price_parser.py  recommendation_engine.py  scrape_runner.py  scraper_registry.py  scrapers_config.py  settings.py  storage.py
dashboard/: PRÓXIMO_PASSO_PROJETO.md  README_DASHBOARD.md  RELATORIO_FINAL_LIMITACAO.md  RELATORIO_LIMITACAO_TECNICA.md  SOLUCAO_DEFINITIVA.md  app.py  production_dashboard.py  run_dashboard.py  start_admin_fixed.bat  start_admin_powershell.ps1  start_as_admin.bat  start_as_admin_ultimate.bat  start_dashboard.bat  start_dashboard.ps1  start_dashboard_simple.py  start_definitive.py  start_high_port.py  start_simple.bat  start_simple.py  start_simple_windows.py  start_windows.py  start_windows_final.py  start_windows_ultimate.py  test_dashboard.py  test_dashboard_robust.py  test_flask.py  test_interactive_dashboard.py  web_dashboard.py
db_backups/: ofertas_backup_2025-08-13_10-12-26.db
deployment/: alert_system.py  backup_system.py  production_setup.py
diagnostics/: __init__.py  ui_reporter.py  verify_snapshot.py
docs/: API_REFERENCE.md  ESPECIFICACAO_GARIMPEIRO_GEEK_COM_RAKUTEN.md  RELATORIO_ESTRUTURA_FINAL.md  telegram_bot.md
exports/: ofertas_ci_7d.csv
feedback/: feedback_system.py
flet_app/: __init__.py  compatibility.py  main.py  premium_dashboard.py  ui_tokens.py
migrations/: 001_add_asin_column.py
monitoring/: health_check.py  performance_metrics.py
posting/: message_templates.py
providers/: mercadolivre_api.py
repo-backup/: GITHUB_SETUP.md  INSTRUCOES_GITHUB.md  README.md  TODO.md  aff_cache  analytics  backup.py  docker-compose.yml  env_example_new.txt  h origin main  install.py  monitor.py  start.py
repo-tmp/: .dockerignore  .env.example  publish_v2.ps1  ui_report.json
reports/: scraper_report_20250816_191206.csv  scraper_report_20250816_191206.json  scraper_report_20250816_191206_summary.txt  scraper_report_20250816_194520.csv  scraper_report_20250816_194520.json  scraper_report_20250816_194535_summary.txt
scrapers/: aliexpress_scraper.py  americanas_scraper.py  kabum_scraper.py  magalu_scraper.py  mercadolivre_scraper.py  submarino_scraper.py
scripts/: README.md  debug_hash.py  fix_reply_text_warnings.py  migrate_database.py  migrate_database.sql  post_sample.py  test-ui.ps1  test-ui.sh
services/: config_service.py  control_service.py  log_service.py  logs.py  metrics.py
src/: __init__.py  ui_report.json
telegram/: __init__.py  bot.py
tests/: __init__.py  adapters_scrapers.py  conftest.py  run_scraper_checks.py  (+8 more)
(+789 files in other folders)
